--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   
   "scripts": {
     "start" :"npx parcel index.html",
+    "build" :"npx parcel build index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
